Update  blurred scroll list, fix activity dark mode, improve settings nav

--- a/frontend/src/style/app/user/_user-images.scss
+++ b/frontend/src/style/app/user/_user-images.scss
@@ -115,8 +115,8 @@
   top: 0;
   margin: 0 auto;
   z-index: 16;
-  background-color: rgba(var(--color-background), 0.75);
-  backdrop-filter: blur(10px);
+  background-color: rgba(var(--color-background), 0.85);
+  backdrop-filter: blur(7px);
 
   & > div {
     @include flex(nowrap, 32px, $align: center);
